welcome.lessons.welcome.array.island.Island.scala.error
island:11: error: not found: value >
		 else if (num(c) = > num(c - 1) )
                                   ^island:5: error: type mismatch;
 found   : Unit
 required: Int
	for (c <- 1 to num.length - 1)
               ^